# yamaha_av_receiver

./: Cargo.toml
api/: Cargo.toml
api/src/: lib.rs
detection/: Cargo.toml
detection/src/: lib.rs
src/: main.rs
