[package]
name = "yamaha_av_receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
detection = { path = "detection" }
api = { path = "api" }
tokio = { version = "1.33.0", features = ["full"] }
tray-item = "0.8.0"